# leg-wheel-src

./: README.md
centralized_plan_pkg/: CMakeLists.txt  myrvizdefault.rviz
centralized_plan_pkg/launch/: cli.launch  visualize.launch
centralized_plan_pkg/src/: batch_solver.cpp  batch_solver.h  fg_eval.h  main.cpp  utility.h  vehicle.h
control_pkg/: CMakeLists.txt  package.xml
control_pkg/include/: controller.h  index.h  keyboard.h  pid.h  timevar.h
control_pkg/launch/: full.launch  manipulator.launch  plan.launch  qp_test.launch  set_zero.launch  test.launch
control_pkg/src/: LQR.cpp  VMC.cpp  callback.cpp  common.cpp  controller.cpp  key_parameter_tuning_node.cpp  keyboard.cpp  pid.cpp  test_node.cpp  timevar.cpp  vmc_node.cpp
imu_pkg/: CMakeLists.txt
imu_pkg/launch/: imu_pkg.launch  tf.launch
imu_pkg/src/: ahrs_driver.cpp  imu_tf.cpp
interface_pkg/: CMakeLists.txt  package.xml
interface_pkg/include/: interface.h
interface_pkg/src/: interface.cpp  motor_can.cpp  robot_init.cpp  transmit_receive.cpp
joy/launch/: joy.launch
manipulator_pkg/: CMakeLists.txt  package.xml
manipulator_pkg/include/: manipulator.h
manipulator_pkg/src/: WorldFrameArmController.cpp  arm.cpp  cmd2arm_node.cpp  common.cpp  manipulator.cpp  manipulator_node.cpp
message/: CMakeLists.txt  package.xml
message/msg/: cmb_interface.msg  cmb_slave.msg  d435i_imu_controller.msg  imu_controller.msg  interface_controller.msg  kinematics_interface.msg  lqr_state.msg  manipulator.msg  pid_interface.msg  pid_state.msg  rs232.msg  rs232_elec_mag_ctrl.msg  rs232_elec_mag_state.msg  test_msg.msg  (+1 more)
plan_pkg/: CMakeLists.txt  note.md
rs232_pkg/: CMakeLists.txt
udpmaster_pkg/: CMakeLists.txt
udpmaster_pkg/config/: init.cfg  master.yaml
udpmaster_pkg/include/: udp_master.h
udpmaster_pkg/launch/: master.launch
udpmaster_pkg/src/: master.cpp  udp_master.cpp
udpslave_pkg/: CMakeLists.txt  package.xml
(+14 files in other folders)
